--- a/Day2_Crawl_Websource.ipynb
+++ b/Day2_Crawl_Websource.ipynb
@@ -95,11 +95,7 @@
     "    for sent in sents:\n",
     "        if '\\\\\\\\(' in sent and '\\\\\\\\)' in sent:\n",
     "            sents_with_formula.append((sent, sent[sent.find('\\\\\\\\(')+3:sent.find('\\\\\\\\)')]))\n",
-    "           \n",
-    "    #if all_algos[algo_num]['name'] == 'Verifying Matrix Products':\n",
-    "    #    for i in sents:\n",
-    "    #        print(i+'\\n\\n\\n')\n",
-    "     \n",
+    "               \n",
     "            \n",
     "    for sent, formula in sents_with_formula:\n",
     "        sent = sent.lower()\n",
@@ -395,7 +391,10 @@
        "  'speedup_coarse': 'Polynomial',\n",
        "  'description': 'Suppose we are given <i>N</i> coins, <i>k</i> of which are \\\\n counterfeit. The real coins are all of equal weight, and the counterfeit coins are \\\\n all of some other equal weight. We have a pan balance and can compare the weight of\\\\n any pair of subsets of the coins. Classically, we need \\\\\\\\( \\\\\\\\Omega(k \\\\\\\\log(N/k)) \\\\\\\\)\\\\n weighings to identify all of the counterfeit coins. We can introduce an oracle such\\\\n that given a pair of subsets of the coins of equal cardinality, it outputs one bit\\\\n indicating balanced or unbalanced. Building on previous work by Terhal and Smolin\\\\n [<a href=\"#TS\">137</a>], Iwama <i>et al.</i> have shown [<a href=\"#Iwama\">136</a>] \\\\n that on a quantum computer, one can identify all of the counterfeit coins using\\\\n \\\\\\\\( O(k^{1/4}) \\\\\\\\) queries. The core techniques behind the quantum speedup are amplitude\\\\n amplification and the Bernstein-Vazirani algorithm.',\n",
        "  'assumed_classical_runtime': 'O(n log(N/n))',\n",
-       "  'assumed_quantum_runtime': 'O(n**(1/4))'},\n",
+       "  'assumed_quantum_runtime': 'O(n**(1/4))',\n",
+       "  'meaningful_domain': [1, 7000],\n",
+       "  'meaningful_domain_min': 1,\n",
+       "  'meaningful_domain_max': 7000},\n",
        " {'name': 'Matrix Rank',\n",
        "  'speedup_coarse': 'Polynomial',\n",
        "  'description': 'Suppose we are given oracle access to the (integer) entries of an\\\\n \\\\\\\\( n \\\\\\\\times m \\\\\\\\)  matrix <i>A</i>. We wish to determine the rank of the matrix. \\\\n Classically this requires order <i>nm</i> queries. Building on \\\\n [<a href=\"#Reichardt2010\">149</a>], Belovs [<a href=\"#Belovs_Rank\">150</a>] gives a\\\\n quantum algorithm that can use fewer queries given a promise that the rank of the \\\\n matrix is at least <i>r</i>. Specifically, Belovs\\\\\\' algorithm uses \\\\n \\\\\\\\( O(\\\\\\\\sqrt{r(n-r+1)}LT) \\\\\\\\) queries, where <i>L</i> is the root-mean-square\\\\n of the reciprocals of the <i>r</i> largest singular values of <i>A</i> and\\\\n <i>T</i> is a factor that depends on the sparsity of the matrix. For general <i>A</i>,\\\\n \\\\\\\\( T = O(\\\\\\\\sqrt{nm}) \\\\\\\\). If <i>A</i> has at most <i>k</i> nonzero entries in any row or\\\\n column then \\\\\\\\( T = O(k \\\\\\\\log(n+m)) \\\\\\\\). (To achieve the corresponding query complexity in \\\\n the <i>k</i>-sparse case, the oracle must take a column index as input, and provide a \\\\n list of the nonzero matrix elements from that column as output.) As an important special\\\\n case, one can use these quantum algorithms for the problem of determining whether a \\\\n square matrix is singular, which is sometimes referred to as the determinant problem. \\\\n For general <i>A</i> the quantum query complexity of the determinant  problem is no \\\\n lower than the classical query complexity [<a href=\"#Dorn\">151</a>]. However, \\\\n [<a href=\"#Dorn\">151</a>] does not rule out a quantum speedup given a promise on <i>A</i>, \\\\n such as sparseness or lack of small singular values.',\n",
@@ -412,7 +411,10 @@
        "  'speedup_coarse': 'Polynomial',\n",
        "  'description': '\\\\nThe search with wildcards problem is to identify a hidden <i>n</i>-bit\\\\nstring <i>x</i> by making queries to an oracle <i>f</i>. Given \\\\\\\\( S\\\\n\\\\\\\\subseteq \\\\\\\\{1,2,\\\\\\\\ldots,n\\\\\\\\} \\\\\\\\) and \\\\\\\\( y \\\\\\\\in \\\\\\\\{0,1\\\\\\\\}^{|S|} \\\\\\\\), <i>f</i>\\\\nreturns one if the substring of <i>x</i> specified by <i>S</i> is equal\\\\nto <i>y</i>, and returns zero otherwise. Classically, this problem has\\\\nquery complexity \\\\\\\\(\\\\\\\\Theta(n)\\\\\\\\). As shown in\\\\n[<a href=\"#Ambainis_Montanaro12\">167</a>], the quantum query\\\\ncomplexity of this problem is \\\\\\\\( \\\\\\\\Theta(\\\\\\\\sqrt{n}) \\\\\\\\). Interestingly,\\\\nthis quadratic speedup is achieved not through amplitude\\\\namplification or quantum walks, but rather through use of the\\\\nso-called Pretty Good Measurement. The paper\\\\n[<a href=\"#Ambainis_Montanaro12\">167</a>] also gives a quantum speedup\\\\nfor the related problem of combinatorial group testing. This result\\\\nand subsequent faster quantum algorithms for group testing are\\\\ndiscussed in the entry on Junta Testing and Group Testing. \\\\n',\n",
        "  'assumed_classical_runtime': 'Theta(n)',\n",
-       "  'assumed_quantum_runtime': 'Theta(sqrt(n))'},\n",
+       "  'assumed_quantum_runtime': 'Theta(sqrt(n))',\n",
+       "  'meaningful_domain': [1, 200],\n",
+       "  'meaningful_domain_min': 1,\n",
+       "  'meaningful_domain_max': 200},\n",
        " {'name': 'Network flows',\n",
        "  'speedup_coarse': 'Polynomial',\n",
        "  'description': 'A network is a directed graph whose edges are\\\\nlabeled with numbers indicating their carrying capacities, and two of\\\\nwhose vertices are designated as the source and the sink. A flow on a\\\\nnetwork is an assignment of flows to the edges such that no flow\\\\nexceeds that edge\\\\\\'s capacity, and for each vertex other than the\\\\nsource and sink, the total inflow is equal to the total outflow. The\\\\nnetwork flow problem is, given a network, to find the flow that maximizes\\\\nthe total flow going from source to sink. For a network with <i>n</i>\\\\nvertices, <i>m</i> edges, and integer capacities of maximum\\\\nmagnitude <i>U</i>, [<a href=\"#Ambainis_Spalek05\">168</a>]\\\\ngives a quantum algorithm to find the maximal flow in time \\\\\\\\( O(\\\\\\\\min\\\\n\\\\\\\\{n^{7/6} \\\\\\\\sqrt{m} \\\\\\\\ U^{1/3}, \\\\\\\\sqrt{nU}m\\\\\\\\} \\\\\\\\times \\\\\\\\log n) \\\\\\\\). The\\\\nnetwork flow problem is closely related to the problem of finding a\\\\nmaximal matching of a graph, that is, a maximal-size subset of edges\\\\nthat connects each vertex to at most one other vertex. The paper\\\\n[<a href=\"#Ambainis_Spalek05\">168</a>] gives algorithms for finding\\\\nmaximal matchings that run in time \\\\\\\\( O(n \\\\\\\\sqrt{m+n} \\\\\\\\log n) \\\\\\\\) if\\\\nthe graph is bipartite, and \\\\\\\\( O(n^2 ( \\\\\\\\sqrt{m/n} + \\\\\\\\log n) \\\\\\\\log n) \\\\\\\\)\\\\nin the general case. The core of these algorithms is Grover search. \\\\nThe known upper bounds on classical complexity of the network flow and\\\\nmatching problems are complicated to state because different classical\\\\nalgorithms are preferable in different parameter regimes. However, in\\\\ncertain regimes, the above quantum algorithms beat all known classical\\\\nalgorithms. (See [<a href=\"#Ambainis_Spalek05\">168</a>] for\\\\ndetails.)',\n",
