--- a/Day2_Crawl_Websource.ipynb
+++ b/Day2_Crawl_Websource.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
     "import re\n",
     "from copy import deepcopy\n",
     "import csv\n",
@@ -27,6 +26,7 @@
     "contents = str(page.content)\n",
     "contents = contents.replace('<b>Algorithm: </b>', '<b>Algorithm:</b>')\n",
     "contents = contents.replace('<b>Description: </b>', '<b>Description:</b>')\n",
+    "# from bs4 import BeautifulSoup\n",
     "# soup = BeautifulSoup(contents, 'html.parser') #don't even need bs, as the page is very non-semantic anyway"
    ]
   },
